--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "codetest",
   "version": "0.1.0",
   "private": true,
+  "author": "Than Than Chay",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^16.7.0",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^16.7.0",
+    "react-materialize": "^3.9.8",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^2.1.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
